; ModuleID = '/home/carl/AnghaBench/tmux/extr_format.c_format_cb_current_path.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_format.c_format_cb_current_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.format_tree = type { %struct.window_pane* }
%struct.window_pane = type { i32 }
%struct.format_entry = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.format_tree*, %struct.format_entry*)* @format_cb_current_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @format_cb_current_path(%struct.format_tree* %0, %struct.format_entry* %1) #0 {
  %3 = alloca %struct.format_tree*, align 8
  %4 = alloca %struct.format_entry*, align 8
  %5 = alloca %struct.window_pane*, align 8
  %6 = alloca i8*, align 8
  store %struct.format_tree* %0, %struct.format_tree** %3, align 8
  store %struct.format_entry* %1, %struct.format_entry** %4, align 8
  %7 = load %struct.format_tree*, %struct.format_tree** %3, align 8
  %8 = getelementptr inbounds %struct.format_tree, %struct.format_tree* %7, i32 0, i32 0
  %9 = load %struct.window_pane*, %struct.window_pane** %8, align 8
  store %struct.window_pane* %9, %struct.window_pane** %5, align 8
  %10 = load %struct.window_pane*, %struct.window_pane** %5, align 8
  %11 = icmp eq %struct.window_pane* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  br label %25

13:                                               ; preds = %2
  %14 = load %struct.window_pane*, %struct.window_pane** %5, align 8
  %15 = getelementptr inbounds %struct.window_pane, %struct.window_pane* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i8* @osdep_get_cwd(i32 %16)
  store i8* %17, i8** %6, align 8
  %18 = load i8*, i8** %6, align 8
  %19 = icmp ne i8* %18, null
  br i1 %19, label %20, label %25

20:                                               ; preds = %13
  %21 = load i8*, i8** %6, align 8
  %22 = call i32 @xstrdup(i8* %21)
  %23 = load %struct.format_entry*, %struct.format_entry** %4, align 8
  %24 = getelementptr inbounds %struct.format_entry, %struct.format_entry* %23, i32 0, i32 0
  store i32 %22, i32* %24, align 4
  br label %25

25:                                               ; preds = %12, %20, %13
  ret void
}

declare dso_local i8* @osdep_get_cwd(i32) #1

declare dso_local i32 @xstrdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
